Fix composite ranges
Composite range didn't actually create a set of all the values of all the child ranges - it creates a list of all their values.
Therefore it would have contained duplicate values.

It could also use the incorrect cache strategy; it needs to use the one used by its children.